--- a/templates/lights.html
+++ b/templates/lights.html
@@ -18,10 +18,10 @@
                 {% for pin in data["relay_pins"] %}
 				{% if data["session"][pin] == 0 %}
 					<img src="static/images/lampoff.png" id="light"></p>
-					<input type="button" onclick="window.location='/light/?set=on&id={% pin %}';" value="Turn on"/ id="lighton">
+					<input type="button" onclick="window.location='/light/?set=on&id={{ pin }}';" value="Turn on"/ id="lighton">
 				{% else %}
 					<img src="static/images/lampon.png" id="light"></p>
-					<input type="button" onclick="window.location='/light/?set=off&id={% pin %}';" value="Turn off"/ id="lightoff">
+					<input type="button" onclick="window.location='/light/?set=off&id={{ pin }}';" value="Turn off"/ id="lightoff">
 				{% endif %}
                 {% endfor %}
 			</div>
