--- a/templates/lights.html
+++ b/templates/lights.html
@@ -15,6 +15,8 @@
 		<div class="row">
 			<div class="two-thirds columns">
 				<h2>Lights on RPi</h2>
+                <table>
+                    <tr>
                 {% for pin in data["relay_pins"] %}
 				{% if data["session"][pin] == 0 %}
                     <td id="cell-{{ row }}">
@@ -28,7 +30,17 @@
                     </td>
 				{% endif %}
                 {% endfor %}
+                    </tr>
+                </table>
 			</div>
 		</div>
 	</div>
 {% endblock %}
+
+<table>
+    <tr>
+        {% for row in data["relay_pins"] %}
+            <td id="cell-{{ row }}">{{ row }}</td>
+        {% endfor %}
+    </tr>
+</table>
