--- a/templates/lights.html
+++ b/templates/lights.html
@@ -21,12 +21,12 @@
 				{% if data["session"][pin] == 0 %}
                     <td id="cell-{{ row }}">
 					<img src="static/images/lampoff.png" id="light"></p>
-					<input type="button" onclick="window.location='/light/?set=on&id={{ pin }}';" value="Turn on"/ id="lighton">
+					<input type="button" onclick="set_status({{ pin }}, 'on');" value="Turn on" id="lighton">
                     </td>
 				{% else %}
                     <td id="cell-{{ row }}">
 					<img src="static/images/lampon.png" id="light"></p>
-					<input type="button" onclick="window.location='/light/?set=off&id={{ pin }}';" value="Turn off"/ id="lightoff">
+					<input type="button" onclick="set_status({{ pin }}, 'off');" value="Turn off" id="lightoff">
                     </td>
 				{% endif %}
                 {% endfor %}
