--- a/templates/header.html
+++ b/templates/header.html
@@ -12,6 +12,7 @@
                 <link rel="stylesheet" href="static/css/skeleton.css">
                 <link rel="icon" type="image/png" href="static/images/favicon.png">
 		<script src="static/js/jquery-3.3.1.min.js"></script>
+            <script src="static/js/main.js"></script>
 		<script>
 			var $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 		</script>
