--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,10 @@
                 <link rel="stylesheet" href="static/css/normalize.css">
                 <link rel="stylesheet" href="static/css/skeleton.css">
                 <link rel="icon" type="image/png" href="static/images/favicon.png">
-		<script src="static/js/jquery-3.3.1.min.js"></script>
+            <script
+                    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+                    integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+                    crossorigin="anonymous"></script>
             <script src="static/js/main.js"></script>
 		<script>
 			var $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
