--- a/templates/lights.html
+++ b/templates/lights.html
@@ -1,6 +1,9 @@
 {% extends "header.html" %}
 {% block content %}
     <div class="container">
+        <div id="alert" class="alert alert-danger" role="alert">
+            This is a danger alert—check it out!
+        </div>
         <div class="row">
             <div class="two-thirds columns">
                 <h2>Lights on RPi</h2>
